--- a/styleHeader.css
+++ b/styleHeader.css
@@ -1,10 +1,21 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@100&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
 
 *{
     padding: 0;
     margin: 0;
-    font-family: 'Roboto Mono', monospace;
+    font-family: 'Poppins', sans-serif;
     box-sizing: border-box;
+}
+
+body{
+    
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 120vh;
+    background: url('images/bg.png') no-repeat;
+    background-size:cover;
+    background-position: center;
 }
 
 header{
@@ -13,9 +24,88 @@ header{
     left: 0;
     width: 100%;
     padding: 20px 100px;
-    background: red;
     display: flex;
     justify-content: space-between;
     align-items: center;
     z-index: 99;
+    
+    
 }
+
+.logo{
+    height: 8em;
+    user-select: none;    
+}
+
+
+.navigation{
+    background-color: rgba(0, 0, 0, 0.3);
+    border-radius: 10px;
+    padding: 20px;
+    padding-right: 50px;
+    
+}
+
+.navigation a {
+    position: relative;
+    font-size: 1.1em;
+    color: white;
+    text-decoration: none;
+    font-weight: 600;
+    margin-left: 40px;
+}
+
+#nav-link::after{
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: -6px;
+    width: 100%;
+    height: 3px;
+    background: red;
+    transform-origin: right;
+    border-radius: 5px;
+    transform: scaleX(0);
+    transition: transform .5s;
+    opacity: .2;
+}
+
+#nav-link:hover::after{
+    transform: scaleX(1);
+    transform-origin: left;
+}
+
+
+.navigation a img{
+    height: 2em;
+    margin-bottom: -10px;
+}
+
+.navigation .btnLogin-popup{
+    width: 130px;
+    height: 50px;
+    background: transparent;
+    border: 2px solid white;
+    border-radius: 6px;
+    outline: none;
+    cursor: pointer;
+    font-size: 1.1em;
+    color: white;
+    font-weight: 500;
+    margin-left: 40px;
+    transition: .5s;
+    
+}
+
+.navigation .btnLogin-popup:hover{
+    background: #fff ;
+    font-weight: bolder;
+    color: rgba(255, 0, 0, 0.3);
+}
+
+.icon img{
+    height: 1em;
+}
+
+
+
